--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@forestryio/gatsby-remark-normalize-paths": "^1.0.0",
-    "bulma": "^0.7.2",
-    "gatsby": "^2.3.3",
+    "bulma": "0.7.1",
+    "gatsby": "^2.18.7",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-feed": "^2.0.11",
